[package]
name = "mud-rs"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
env_logger = "0.11.9"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.7"

[[bin]]
name = "mud"
path = "src/main.rs"
